# ProffieConfig

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.md  ProffieConfig.pro  README.md  defines.h  functions.md  init.ps1  init.sh  main.cpp  mingw-tc.cmake  styletypes.md  todo.md
resources/: CMakeLists.txt
resources/ProffieOS/: ProffieOS.ino
resources/ProffieOS/props/: saber_fett263_buttons.h
resources/defaultProps/: sa22c.pconf
resources/i18n/es/: proffieconfig.mo  proffieconfig.po
resources/icons/: icon.icns  icon.xpm
resources/icons/old/: icon-small.xpm
resources/linux/arduino-cli/: arduino-cli
resources/macOS/arduino-cli/: arduino-cli
resources/props/: BC.pconf  caiwyn.pconf  fett263.pconf  manifest.pconf  s3.pconf  sa22c.pconf  sabersense.pconf  shtok.pconf
resources/props/BC_7_15/: data.pconf
resources/props/BC_8_10/: data.pconf
resources/props/Caiwyn_7_15/: data.pconf
resources/props/Fett263_7_15/: data.pconf
resources/props/Fett263_8_10/: data.pconf
resources/props/SA22C_7_15/: data.pconf
resources/props/Sabersense_301/: data.pconf
resources/props/old/: sa22c.pconf
resources/templates/: Info.plist.in  proffieconfig.po  proffieconfig.pot  resource.rc.in
src/: CMakeLists.txt  Common.cmake  Info.plist.in  Makefile  Makefile.Debug  Makefile.Release  ProffieConfig  ProffieConfig.debug  ProffieConfig.pro  ProffieConfig.workspace  main.cpp
src/.qtc_clangd/: compile_commands.json
src/appcore/: interfaces.h  state.cpp  state.h
src/components/: Component.cmake
src/components/app/: CMakeLists.txt  app.cpp  app.h  app.hpp  critical_dialog.cpp  critical_dialog.h  critical_dialog.hpp  info.cpp  info.h  info.hpp  windowids.h
src/components/config/: CMakeLists.txt  config.cpp  config.h  config.hpp  info.cpp  info.h  info.hpp  strings.hpp  types.h  unsupported.md
src/components/data/: CMakeLists.txt  bool.cpp  bool.hpp  choice.cpp  choice.hpp  context.hpp  generic.cpp  generic.hpp  number.cpp  number.hpp  option.cpp  option.hpp  receiver.cpp  receiver.hpp  recvtable.hpp  selection.cpp  selection.hpp  selector.cpp  selector.hpp  string.cpp  string.hpp  vector.cpp  vector.hpp  version.cpp  version.hpp
src/components/log/: CMakeLists.txt  branch.cpp  branch.h  branch.hpp  context.cpp  context.h  context.hpp  info.cpp  info.h  info.hpp  logger.cpp  logger.h  logger.hpp  message.cpp  message.h  message.hpp  severity.h  severity.hpp
src/components/logging/: CMakeLists.txt  logger.cpp  logger.hpp
src/components/paths/: CMakeLists.txt  info.cpp  info.h  paths.cpp  paths.h
src/components/pconf/: CMakeLists.txt  info.cpp  info.h  info.hpp  pconf.cpp  pconf.h  read.cpp  read.h  read.hpp  types.cpp  types.h  types.hpp  utils.cpp  utils.h  utils.hpp  write.cpp  write.h  write.hpp
src/components/process/: CMakeLists.txt  process.cpp  process.h  process.hpp
src/components/ui/: CMakeLists.txt  bitmap.cpp  build.cpp  build.hpp  controls.cpp  controls.h  dialog.cpp  dialog.hpp  dynamic_list.hpp  font.cpp  font.hpp  frame.cpp  frame.h  frame.hpp  info.cpp  info.h  info.hpp  message.cpp  message.h  message.hpp  movable.cpp  movable.h  notifier.cpp  notifier.h  panel.cpp  panel.h  plaque.cpp  plaque.h  static_box.cpp  static_box.h  symbols.cpp  symbols.hpp  text.cpp  text.hpp  types.hpp  utils.cpp  utils.hpp
src/components/utils/: CMakeLists.txt  clone.h  color.cpp  color.h  color.hpp  crypto.cpp  crypto.h  data.cpp  data.hpp  defer.h  defer.hpp  demangle.h  demangle.hpp  files.cpp  files.hpp  hash.cpp  hash.hpp  image.cpp  image.h  info.cpp  info.h  info.hpp  limits.h  objc.hpp  parent.hpp  paths.cpp  paths.h  paths.hpp  position.h  rand.cpp  rand.hpp  string.cpp  string.h  string.hpp  theme.cpp  theme.h  trace.cpp  trace.h  types.h  types.hpp  (+5 more)
src/config/: button.h  config.cpp  config.h  configuration.cpp  configuration.h  defaults.cpp  defaults.h  propfile.cpp  propfile.h  settings.cpp  settings.h
src/core/: appstate.cpp  appstate.h  defines.h  fileparse.cpp  fileparse.h  mainwindow.cpp  mainwindow.h  propfile.cpp  propfile.h
src/editor/: editorwindow.cpp  editorwindow.h
src/elements/: misc.cpp  misc.h  progress.cpp  progress.h  threadrunner.h
src/include/: appstate.h  arduino.h  bladeidpage.h  bladespage.h  configuration.h  defines.h  generalpage.h  hardwarepage.h  initializer.h  mainwindow.h  misc.h  presetspage.h  progress.h  proppage.h  serialmonitor.h  styleeditor.h  threadrunner.h
src/launcher/: CMakeLists.txt  main.cpp  routines.cpp  routines.h
src/log/: logger.cpp  logger.h
src/mainmenu/: mainmenu.cpp  mainmenu.h
src/onboard/: onboard.cpp  onboard.h
src/pages/: bladeidpage.cpp  bladeidpage.h  bladespage.cpp  bladespage.h  generalpage.cpp  generalpage.h  presetspage.cpp  proppage.cpp  proppage.h
src/pconf/: pconf.cpp  pconf.h
src/proffieconfig/: CMakeLists.txt  ProffieConfig.pro  main.cpp
src/proffieconstructs/: range.cpp  range.h  utilfuncs.h  vector3d.cpp  vector3d.h
src/prop/: propfile.cpp  propfile.h
src/sources/: arduino.cpp  bladeidpage.cpp  bladespage.cpp  configuration.cpp  generalpage.cpp  hardwarepage.cpp  initializer.cpp  mainwindow.cpp  misc.cpp  presetspage.cpp  progress.cpp  proppage.cpp  serialmonitor.cpp  styleeditor.cpp
src/styleeditor/: styleeditor.cpp  styleeditor.h
src/stylemanager/: stylemanager.cpp  stylemanager.h
src/stylepreview/: blade.cpp  blade.h  webview.cpp  webview.h
src/styles/: bladestyle.cpp  bladestyle.h  colordata.cpp  colordata.h  parse.cpp  parse.h
src/test/: CMakeLists.txt  main.cpp  uitest.cpp  uitest.h
src/tools/: arduino.cpp  arduino.h  serialmonitor.cpp  serialmonitor.h
src/ui/: bool.cpp  bool.h  combobox.cpp  combobox.h  drawer.cpp  drawer.h  frame.cpp  frame.h  movable.cpp  movable.h  numeric.cpp  numeric.h  numericdec.cpp  numericdec.h  pcchoice.cpp  pcchoice.h  pccombobox.cpp  pccombobox.h  pcspinctrl.cpp  pcspinctrl.h  pcspinctrldouble.cpp  pcspinctrldouble.h  pctextctrl.cpp  pctextctrl.h  selection.cpp  selection.h  text.cpp  text.h  toggle.cpp  toggle.h
src/upgen/: CMakeLists.txt  main.cpp
src/utility/: time.cpp  time.h
(+1616 files in other folders)
